# soundGIF

./: .gitignore  Cargo.toml  DISTRIBUTION.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release-builds.yml
plugins/: README.md
plugins/vencord/: README.md  install-linux.sh  install-macos-linux.sh  install-macos.command  install-windows.cmd  install-windows.ps1
plugins/vencord/soundGif/: README.md  index.tsx  styles.css
src/: lib.rs  main.rs  ui_v2.html
tests/: cli.rs
